@@ -1,3 +1,9 @@
+2011-12-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/51576
+	* tree-cfg.c (replace_uses_by): Call maybe_clean_or_replace_eh_stmt
+	even if fold_stmt didn't change anything.
+
 2011-12-16  Richard Guenther  <rguenther@suse.de>
 
 	PR lto/51572
